# pdf-editor-app

./: ANNOTATION_SYSTEM_USAGE.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_CRASH_FIX.md  CRASH_FIX_SUMMARY.md  FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_EXAMPLE.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  pdf_annotation_editor.cpp  pdf_annotation_editor.h  pdf_editor_jni.cpp  pdf_page_renderer.cpp  pdf_text_detector.cpp  pdf_text_detector.h  pdf_text_editor.cpp  pdf_text_editor.h  pdf_text_quad_extractor.cpp  pdf_text_quad_extractor.h
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: pdf_annotation.dart  pdf_file.dart  selected_pdf_text.dart
lib/painters/: pdf_icon_painter.dart  tool_icons_painter.dart
lib/screens/: merge_pdf_screen.dart  pdf_text_edit_screen.dart  pdf_viewer_screen.dart  pdf_viewer_screen_integration.dart  settings_screen.dart  splash_screen.dart  split_pdf_page_selection_screen.dart  tools_screen.dart
lib/services/: annotation_storage_service.dart  mupdf_editor_service.dart  pdf_cache_service.dart  pdf_content_editor_service.dart  pdf_inline_text_editor_service.dart  pdf_isolate_service.dart  pdf_page_cache.dart  pdf_preferences_service.dart  pdf_save_service.dart  pdf_scanner_service.dart  pdf_service.dart  pdf_storage_service.dart  pdf_text_editor_service.dart  pdf_text_extraction_service.dart  pdf_text_selection_service.dart  (+2 more)
test/: widget_test.dart
web/: index.html
(+41 files in other folders)
